correct eslint setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
   // ...
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "sourceType": "module"
+  },
+  "extends": ["next", "next/core-web-vitals"],
   "rules": {
     // Other rules
     "@next/next/no-img-element": "off"
