--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "eslint-config-next": "^12.0.7",
+    "eslint-plugin-next": "^0.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "7",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
