--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "eslint-config-next": "^12.0.7",
     "eslint-plugin-next": "^0.0.0",
     "next": "latest",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
