--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "eslint-config-next": "^12.0.7",
     "eslint-plugin-next": "^0.0.0",
+    "fuse.js": "^6.4.6",
     "js-cookie": "^3.0.1",
     "next": "latest",
     "next-redux-wrapper": "^7.0.5",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
