--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-next": "^0.0.0",
     "fuse.js": "^6.4.6",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "latest",
     "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
